# kernel_liteos_a_note

./: .gitignore  404.html  BUILD.gn  CHANGELOG.md  Kconfig  LICENSE  Makefile  OAT.xml  README.md  README_V1.0.md  TODOList.md  build.sh  bundle.json  config.html  config.mk  donate.md  index.html  kernel_test.sources  liteos.gni
apps/mksh/: BUILD.gn  Makefile
arch/arm/arm/: BUILD.gn  Makefile
bsd/: BUILD.gn  Kconfig  Makefile
bsd/arm/: autoconf.c
bsd/compat/linuxkpi/: BUILD.gn  Makefile
bsd/dev/usb/: BUILD.gn  Kconfig  Makefile  usb_debug.c  usb_dev.c  usb_device.c
bsd/sys/: bus.h
fs/jffs2/: BUILD.gn  Kconfig  Makefile  jffs2.patch
fs/jffs2/include/: jffs2_hash.h  vfs_jffs2.h
fs/jffs2/src/: jffs2_hash.c  vfs_jffs2.c
fs/vfs/: BUILD.gn  Kconfig  Makefile  mount.c  path_cache.c  vnode.c  vnode_hash.c
fs/vfs/bcache/: BUILD.gn  Makefile
fs/vfs/bch/: Makefile
fs/vfs/disk/: Makefile  disk.c  disk_shellcmd.c
fs/vfs/epoll/: fs_epoll.c
fs/vfs/include/: epoll.h  fs_poll_pri.h  path_cache.h  vnode.h
fs/vfs/multi_partition/: Makefile
fs/vfs/operation/: fs_chattr.c  fs_check.c  fs_fallocate.c  fs_fallocate64.c  fs_file.c  fs_file_mapping.c  fs_getlabel.c  fs_init.c  fs_other.c  fs_preadv.c  fs_pwritev.c  fs_readv.c  fs_utime.c  fs_virstatfs.c  fs_writev.c  fullpath.c  vfs_chattr.c  vfs_check.c  vfs_cloexec.c  vfs_fallocate.c  vfs_fallocate64.c  vfs_fcntl.c  vfs_file_mapping.c  vfs_force_umount.c  vfs_init.c  vfs_other.c  vfs_preadv.c  vfs_procfd.c  vfs_pwritev.c  vfs_readv.c  vfs_utime.c  vfs_writev.c
fs/vfs/vfs_cmd/: vfs_shellcmd.c
kernel/base/: BUILD.gn  Makefile
kernel/base/container/: los_container.c  los_credentials.c  los_ipc_container.c  los_mnt_container.c  los_pid_container.c  los_time_container.c  los_uts_container.c
kernel/base/core/: los_bitmap.c  los_info.c  los_process.c  los_smp.c  los_sortlink.c  los_swtmr.c  los_sys.c  los_task.c  los_tick.c  los_timeslice.c
kernel/base/include/: los_base_pri.h  los_binarytree_pri.h  los_container_pri.h  los_credentials_pri.h  los_err_pri.h  los_event_pri.h  los_futex_pri.h  los_info_pri.h  los_ipc_container_pri.h  los_ipcdebug_pri.h  los_membox_pri.h  los_memory_pri.h  los_memstat_pri.h  los_mnt_container_pri.h  los_multipledlinkhead_pri.h  los_mux_pri.h  los_net_container_pri.h  los_oom.h  los_percpu_pri.h  los_pid_container_pri.h  los_pmm.h  los_printf_pri.h  los_process_pri.h  los_queue_debug_pri.h  los_queue_pri.h  los_rwlock_pri.h  los_sched_pri.h  los_sem_debug_pri.h  los_sem_pri.h  los_signal.h  los_sortlink_pri.h  los_stackinfo_pri.h  los_stat_pri.h  los_statistics_pri.h  los_swtmr_pri.h  los_sys_pri.h  los_task_pri.h  los_tick_pri.h  los_time_container_pri.h  los_typedef_pri.h  (+15 more)
kernel/base/ipc/: los_event.c  los_futex.c  los_ipcdebug.c  los_mux.c  los_queue.c  los_queue_debug.c  los_rwlock.c  los_sem.c  los_sem_debug.c  los_signal.c
kernel/base/misc/: kill_shellcmd.c  los_misc.c  los_stackinfo.c  mempt_shellcmd.c  panic_shellcmd.c  swtmr_shellcmd.c  sysinfo_shellcmd.c  task_shellcmd.c  vm_shellcmd.c
kernel/base/mp/: los_lockdep.c  los_mp.c  los_percpu.c  los_spinlock.c  los_stat.c
kernel/base/om/: los_err.c
kernel/base/sched/: los_deadline.c  los_idle.c  los_priority.c  los_sched.c  los_sortlink.c  los_statistics.c
kernel/base/vm/: los_vm_boot.c  los_vm_dump.c  los_vm_fault.c  los_vm_filemap.c  los_vm_iomap.c  los_vm_map.c  los_vm_page.c  los_vm_phys.c  los_vm_scan.c  los_vm_syscall.c  oom.c  shm.c
lib/libc/: BUILD.gn  Makefile  musl
lib/libc/musl/: BUILD.gn  Makefile
lib/libc/newlib/: BUILD.gn
lib/libc/optimization/: asmdefs.h
lib/libc/src/: memcmp.c  memset.c
lib/libmbedtls/: BUILD.gn  Makefile
lib/libsec/: BUILD.gn  Makefile
testsuites/kernel/: BUILD.gn  Kconfig  Kconfig_case  Makefile  test.mk
testsuites/kernel/include/: iCunit.h  iCunit.inc  iCunit_config.h  los_test_pri.h  osTest.h
testsuites/kernel/src/: iCunit.c  osTest.c
testsuites/unittest/: BUILD.gn  config.gni
testsuites/unittest/IO/: BUILD.gn  It_test_IO.h  io_test.cpp
testsuites/unittest/IPC/: BUILD.gn  ipc_test.cpp
testsuites/unittest/basic/: BUILD.gn  config.gni
testsuites/unittest/common/: osTest.cpp
testsuites/unittest/container/: BUILD.gn  It_container_test.cpp  It_container_test.h  config.gni
testsuites/unittest/drivers/: BUILD.gn  config.gni
testsuites/unittest/dynload/: BUILD.gn  dynload_test.cpp  it_test_dynload.h
testsuites/unittest/exc/: BUILD.gn  it_test_exc.h
testsuites/unittest/extended/: BUILD.gn  config.gni
testsuites/unittest/fs/: BUILD.gn  config.gni
testsuites/unittest/fuzz/: BUILD.gn  adjtime_fuzzer.cpp  chroot_fuzzer.cpp  clone_fuzzer.cpp  epoll_create_fuzzer.cpp  epoll_ctl_fuzzer.cpp  epoll_wait_fuzzer.cpp  fesetenv_fuzzer.cpp  fuzzertest.h  getrlimit_fuzzer.cpp  main.cpp  mlock_fuzzer.cpp  mlockall_fuzzer.cpp  posix_spawn_file_actions_addchdir_np_fuzzer.cpp  posix_spawn_file_actions_adddup2_fuzzer.cpp  posix_spawn_file_actions_addfchdir_np_fuzzer.cpp  posix_spawn_file_actions_addopen_fuzzer.cpp  posix_spawn_file_actions_destroy_fuzzer.cpp  posix_spawn_file_actions_init_fuzzer.cpp  posix_spawn_fuzzer.cpp  posix_spawnattr_destroy_fuzzer.cpp  posix_spawnattr_getflags_fuzzer.cpp  posix_spawnattr_getpgroup_fuzzer.cpp  posix_spawnattr_getschedparam_fuzzer.cpp  posix_spawnattr_getschedpolicy_fuzzer.cpp  posix_spawnattr_getsigdefault_fuzzer.cpp  posix_spawnattr_getsigmask_fuzzer.cpp  posix_spawnattr_init_fuzzer.cpp  posix_spawnattr_setflags_fuzzer.cpp  posix_spawnattr_setpgroup_fuzzer.cpp  posix_spawnattr_setschedparam_fuzzer.cpp  posix_spawnattr_setschedpolicy_fuzzer.cpp  posix_spawnattr_setsigdefault_fuzzer.cpp  posix_spawnattr_setsigmask_fuzzer.cpp  posix_spawnp_fuzzer.cpp  pthread_mutex_consistent_fuzzer.cpp  pthread_mutex_getprioceiling_fuzzer.cpp  pthread_mutexattr_setprotocol_fuzzer.cpp  pthread_mutexattr_setrobust_fuzzer.cpp  pthread_mutexattr_settype_fuzzer.cpp  (+10 more)
testsuites/unittest/libc/: BUILD.gn  config.gni
testsuites/unittest/liteipc/: BUILD.gn  it_test_liteipc.cpp  it_test_liteipc.h  liteipc.h  smgr_demo.cpp
testsuites/unittest/misc/: BUILD.gn  (+2 more)
(+4084 files in other folders)
