# Copyright (c) 2013-2019 Huawei Technologies Co., Ltd. All rights reserved.
# Copyright (c) 2020-2021 Huawei Device Co., Ltd. All rights reserved.
#
# Redistribution and use in source and binary forms, with or without modification,
# are permitted provided that the following conditions are met:
#
# 1. Redistributions of source code must retain the above copyright notice, this list of
#    conditions and the following disclaimer.
#
# 2. Redistributions in binary form must reproduce the above copyright notice, this list
#    of conditions and the following disclaimer in the documentation and/or other materials
#    provided with the distribution.
#
# 3. Neither the name of the copyright holder nor the names of its contributors may be used
#    to endorse or promote products derived from this software without specific prior written
#    permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
# THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
# PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR
# CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
# EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
# PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
# OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
# WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
# OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
# ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

import("//kernel/liteos_a/liteos.gni")

module_switch = defined(LOSCFG_COMPAT_BSD)
module_name = "libbsd"
kernel_module(module_name) {
  sources = [
    "kern/bus_if.c",
    "kern/device_if.c",
    "kern/kern_condvar.c",
    "kern/kern_timeout.c",
    "kern/subr_bus.c",
    "kern/subr_kobj.c",
  ]

  if (defined(LOSCFG_ARCH_ARM_AARCH32)) {
    sources += [
      "arm/autoconf.c",
      "arm/hw_user_copy.S",
      "arm/in_cksum.c",
      "arm/in_cksum_arm.S",
      "arm/nexus.c",
    ]
  }

  if (defined(LOSCFG_DRIVERS_RANDOM)) {
    sources += [
      "crypto/rijndael/rijndael-alg-fst.c",
      "crypto/rijndael/rijndael-api-fst.c",
      "crypto/sha2/sha256c.c",
      "dev/random/hash.c",
      "dev/random/yarrow.c",
      "libkern/explicit_bzero.c",
    ]
  }

  public_configs = [ ":public" ]
}

group("bsd") {
  public_deps = [ ":$module_name" ]

  deps = [
    "compat/linuxkpi",
    "dev/usb",
  ]
}

config("public") {
  include_dirs = [
    ".",
    "kern",
  ]
  configs = [
    "compat/linuxkpi:public",
    "dev/usb:public",
  ]
}
